feat: support tags

--- a/dev/index.html
+++ b/dev/index.html
@@ -8,7 +8,7 @@
   <title>&lt;ninja-keys> Demo</title>
   <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
   <script src="../node_modules/lit/polyfill-support.js"></script>
-  <script type="module" src="../dist/ninja-keys.js"></script>
+  <script type="module" src="../dist/index.js"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter:300,400,500" as="style" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Material+Icons&display=block" rel="stylesheet">
@@ -107,6 +107,7 @@
   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 8h10M7 12h4m1 8l-4-4H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-3l-4 4z" />
 </svg>`,
         section: 'Projects',
+        tags: ['tag-3', 'tag-2']
       },
       //
       {
